# mp3gon

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
audioindex/: __init__.py  embeddings.py  index.py  io.py  retrieve.py  segmentation.py
audioindex/cli/: build.py  query.py
audioindex/tests/: audio_synth_utils.py  test_index.py  test_segmentation.py
codeclm/: __init__.py  dataset.py  infer.py  model.py  packing.py  tokenize.py  train.py
codeclm/tests/: test_packing.py  test_tiny_train.py
configs/: codec24k.yaml
mp3gon/: .eslintrc.js  .gitignore  App.tsx  README.md  index.html  metadata.json  package.json  vite.config.ts  vitest.config.ts
mp3gon/__tests__/: Header.test.tsx
mp3gon/api/: gemini.ts
mp3gon/components/: AIEnhancer.tsx  AudioUploader.tsx  ErrorBoundary.tsx  Icons.tsx  MP3gonVisualizer.tsx  PlayagonPlayer.tsx  ResultPlayer.tsx  SourceSelector.tsx
mp3gon/components/__tests__/: Header.test.tsx  TransformationParameters.test.tsx
mp3gon/services/: audioProcessor.ts  geminiService.ts  playagon.ts
scripts/: build_segments_json.py  mp3gon_demo_export.py
